@@ -16,8 +16,9 @@ serd (1.0.0) unstable;
   * Add model for storing statements in memory
   * Add support for validation
   * Add option for writing terse output without newlines
+  * Add support for writing terse collections
 
- -- David Robillard <d@drobilla.net>  Sun, 10 Mar 2019 13:21:37 +0100
+ -- David Robillard <d@drobilla.net>  Sun, 10 Mar 2019 18:09:18 +0100
 
 serd (0.30.1) unstable;
 
